put back missing image, fix map sizing on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,3 +13,16 @@
 	text-decoration: none
 }
 
+@media (max-width: 605px) {
+	iframe {
+		width: 100%;
+		height: 200px;
+	}
+}
+
+@media (min-width: 605px) {
+	iframe {
+		width: 100%;
+		height: 400px;
+	}
+}
